--- a/HTML & CSS/Flexbox/06_Photo-gallery-flexbox/style.css
+++ b/HTML & CSS/Flexbox/06_Photo-gallery-flexbox/style.css
@@ -10,6 +10,7 @@ body {
     background-color: lightgray;
     align-items: center;
     justify-content: center;
+    align-self: center;
     height: 100vh;
     width: 100vw;
 }
