--- a/JS Back-End/Final Exam/views/details.hbs
+++ b/JS Back-End/Final Exam/views/details.hbs
@@ -77,29 +77,15 @@
         <div class="comments">
           <div class="comments-top">
 
-            {{#each comments}}
-              <div class="userDetails">
-                <div class="comment-data">
-                  <div class="profilepic">
-                    <div class="profile_img">
-                      <div class="image">
-                        <!-- User Profile Image -->
-                        <img src="/static/images/person.png" alt="img8" />
-                      </div>
-                    </div>
-                  </div>
-
-                  <!--User's username-->
-                  <p><b>StevIvanov</b>- OMG where can i get one</p>
-                </div>
-              </div>
+            {{#each post.commentList}}
+              {{> commentPartial}}
             {{/each}}
 
           </div>
         </div>
       </div>
-      {{#if isAuthor}}{{else}}
-        {{#if hasUser}}
+      {{#unless post.isAuthor}}
+      {{#if post.hasUser}}
           <div class="addComments">
             <!-- Start Add Comments Form -->
             <form method="POST" action="/comment/{{post._id}}">
@@ -114,8 +100,8 @@
               <button type="submit">Post</button>
             </form>
           </div>
-        {{/if}}
       {{/if}}
+      {{/unless}}
 
     </div>
   </div>
