--- a/JS Back-End/Exam Preparation 2/views/details.hbs
+++ b/JS Back-End/Exam Preparation 2/views/details.hbs
@@ -45,8 +45,7 @@
       </div>
       <div class="trip-desc">
         <h5>Information about the trip</h5>
-        <textarea class="lead" disabled>Wishing you a safe journey and a
-          relaxing vacation when you arrive!</textarea>
+        <textarea class="lead" disabled>{{data.description}}</textarea>
         <h5>Price: <span class="lead">{{data.price}}</span> BGN</h5>
 
         <!-- if there are no logged in user do not show div with class actions  -->
