--- a/JS Back-End/Exam Preparation 2/views/edit.hbs
+++ b/JS Back-End/Exam Preparation 2/views/edit.hbs
@@ -2,7 +2,7 @@
   <div class="container edit">
     <h1>Edit trip</h1>
     <div>
-      <form action="" method="">
+      <form action="/edit/{{data._id}}" method="POST">
         <div class="edit-label">
           <label for="startPoint">
             <i class="fas fa-map-marker-alt"></i>
@@ -16,15 +16,15 @@
             type="text"
             class="form-control-2"
             id="startPoint"
-            name=""
-            value=""
+            name="startPoint"
+            value="{{data.startPoint}}"
           />
           <input
             type="text"
             class="form-control-2"
             id="endPoint"
-            name=""
-            value=""
+            name="endPoint"
+            value="{{data.endPoint}}"
           />
         </div>
         <div class="edit-label">
@@ -38,15 +38,15 @@
             type="date"
             class="form-control-2"
             id="date"
-            name=""
-            value=""
+            name="date"
+            value="{{data.date}}"
           />
           <input
             type="time"
             class="form-control-2"
             id="time"
-            name=""
-            value=""
+            name="time"
+            value="{{data.time}}"
           />
         </div>
         <div class="edit-label">
@@ -58,15 +58,15 @@
             type="text"
             class="form-control-2"
             id="carImage"
-            name=""
-            value=""
+            name="carImage"
+            value="{{data.carImage}}"
           />
           <input
             type="text"
             class="form-control-2"
             id="carBrand"
-            name=""
-            value=""
+            name="carBrand"
+            value="{{data.carBrand}}"
           />
         </div>
         <div class="edit-label">
@@ -78,20 +78,24 @@
             type="text"
             class="form-control-2"
             id="seats"
-            name=""
-            value=""
+            name="seats"
+            value="{{data.seats}}"
           />
           <input
             type="text"
             class="form-control-2"
             id="price"
-            name=""
-            value=""
+            name="price"
+            value="{{data.price}}"
           />
         </div>
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea class="form-control" id="description" name=""></textarea>
+          <textarea
+            class="form-control"
+            id="description"
+            name="description"
+          >{{data.description}}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
